--- a/about.mdwn
+++ b/about.mdwn
@@ -1,3 +1,3 @@
-* This second-level domain domain: [[greptilian.com]]
+* This domain: [[greptilian.com]]
 * The author, Philip Durbin: http://greptilian.com
-* This wiki: [[ikiwiki]]
+* The software powering this wiki: [[ikiwiki]]
