--- a/java/javaone/2012.mdwn
+++ b/java/javaone/2012.mdwn
@@ -1,25 +1,4 @@
 - bookmarked:
-    - CON6430:
-        - title: Java EE and Spring Framework Panel Discussion
-        - abstract: 'In the age of Java EE 6 and Spring 3, enterprise Java developers have many architectural choices, including Java EE 6 and Spring, but which one is right for your project? ... ...'
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=6430
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON6430_PDF_6430_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON6430_mp4_6430_001.mp4
-        - review: None
-    - BOF7503:
-        - title: Best Practices in Java Enterprise Monitoring
-        - abstract: 'As applications become more service-oriented, interactions within a distributed enterprise application landscape add to the complexity of monitoring and troubleshooting ... ...'
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=7503
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF7503_PDF_7503_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF7503_mp4_7503_001.mp4
-        - review: None
-    - CON7875:
-        - title: Building Portable Java EE 6 Applications in Eclipse
-        - abstract: 'Java EE 6 development has never been easier in Eclipse. This session shows how the Eclipse platform enables Java EE 6 application development, deployment, and debugging for ...'
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=7875
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON7875_PDF_7875_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON7875_mp4_7875_001.mp4
-        - review: None
     - CON5312:
         - title: 'Continuous Enterprise Development: Case Studies in Java EE Integration Testing'
         - abstract: This highly technical session examines solutions for easing the testing of some of the more complex use cases within Java EE. Each example is backed by a runnable test ...
@@ -76,13 +55,6 @@
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4862_PDF_4862_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4862_mp4_4862_001.mp4
         - review: None
-    - CON4627:
-        - title: Standardizing Web Flow Technology with JSF Faces Flows
-        - abstract: 'JavaServer Faces has established itself as a full-featured framework for building sophisticated Java EE applications. One of the key things missing from JSF, though, is ... ...'
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=4627
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4627_PDF_4627_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4627_mp4_4627_001.mp4
-        - review: None
     - CON4204:
         - title: Developing Best Practices for Using Hudson CI
         - abstract: 'The Hudson CI server is often used merely as an automated build system and to run tests, but is it at the heart of your development process? Is it providing the fast, ...'
@@ -103,13 +75,6 @@
         - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=13284
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF13284_PDF_13284_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF13284_mp4_13284_001.mp4
-        - review: None
-    - CON12856:
-        - title: 'Java EE 7: Infinite Extensibility Meets Infinite Reuse'
-        - abstract: This session is an exploration of two bleeding-edge concepts under active consideration in Java EE 7 to greatly expand annotation reuse across the platform and drastically ...
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=12856
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON12856_PDF_12856_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON12856_mp4_12856_001.mp4
         - review: None
 - other:
     - CON3470:
@@ -2060,6 +2025,27 @@
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON6238_PDF_6238_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON6238_mp4_6238_001.mp4
         - review: Ok but not great. Interesting to hear that eBay wrote their own application server.
+    - CON6430:
+        - title: Java EE and Spring Framework Panel Discussion
+        - abstract: 'In the age of Java EE 6 and Spring 3, enterprise Java developers have many architectural choices, including Java EE 6 and Spring, but which one is right for your project? ... ...'
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=6430
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON6430_PDF_6430_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON6430_mp4_6430_001.mp4
+        - review: Good discussion. Would listen again.
+    - BOF7503:
+        - title: Best Practices in Java Enterprise Monitoring
+        - abstract: 'As applications become more service-oriented, interactions within a distributed enterprise application landscape add to the complexity of monitoring and troubleshooting ... ...'
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=7503
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF7503_PDF_7503_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF7503_mp4_7503_001.mp4
+        - review: Not worth listening to.
+    - CON7875:
+        - title: Building Portable Java EE 6 Applications in Eclipse
+        - abstract: 'Java EE 6 development has never been easier in Eclipse. This session shows how the Eclipse platform enables Java EE 6 application development, deployment, and debugging for ...'
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=7875
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON7875_PDF_7875_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON7875_mp4_7875_001.mp4
+        - review: Very good talk. Nice and technical
     - CON4701:
         - title: 50 Tips in 50 Minutes for GlassFish Fans
         - abstract: This fast-paced session presents 50 tips and tricks for using GlassFish Server technology. Learn about features for both GlassFish Server Open Source Edition and Oracle ... ...
@@ -2095,6 +2081,13 @@
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON2619_PDF_2619_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON2619_mp4_2619_001.mp4
         - review: 'Not very interesting to me. Too much about middleware, Enterprise Service Bus, etc.'
+    - CON4627:
+        - title: Standardizing Web Flow Technology with JSF Faces Flows
+        - abstract: 'JavaServer Faces has established itself as a full-featured framework for building sophisticated Java EE applications. One of the key things missing from JSF, though, is ... ...'
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=4627
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4627_PDF_4627_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4627_mp4_4627_001.mp4
+        - review: Very good talk
     - BOF7955:
         - title: Avoiding Java EE Application Design Traps to Achieve Effective Use of Cloud Computing
         - abstract: Cloud computing and the Java EE platform have evolved to provide a runtime environment for Java EE applications with minimal architectural interference. This evolution is ... ...
@@ -2102,3 +2095,10 @@
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF7955_PDF_7955_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF7955_mp4_7955_001.mp4
         - review: 'Not worth listening to. Audio is pretty bad, hard to understand people. Not a ton of insight.'
+    - CON12856:
+        - title: 'Java EE 7: Infinite Extensibility Meets Infinite Reuse'
+        - abstract: This session is an exploration of two bleeding-edge concepts under active consideration in Java EE 7 to greatly expand annotation reuse across the platform and drastically ...
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=12856
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON12856_PDF_12856_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON12856_mp4_12856_001.mp4
+        - review: Good
