--- a/weechat.mdwn
+++ b/weechat.mdwn
@@ -22,6 +22,10 @@ http://www.weechat.org/files/doc/stable/weechat_quickstart.en.html#key_bindings
 
 task #12499, filter mode changes after joins: http://savannah.nongnu.org/task/?12499
 
+"When you see a mode change it's not "MODE" command received but a numeric command (for example 324 for channel modes). So you may have to ignore many numeric commands to ignore all modes." -- http://forums.flashtux.org/viewtopic.php?p=106&sid=62c78f547fb166200ca839a0d08d96d4#p106
+
+http://www.weechat.org/files/doc/weechat_faq.en.html#filter_irc_join_part_quit
+
 ## See also
 
 http://dev.weechat.org/post/2008/10/25/Smart-IRC-join-part-quit-message-filter
