--- a/java.mdwn
+++ b/java.mdwn
@@ -1,1 +1,7 @@
 [[!map pages=java/*]]
+
+## Misc
+
+http://docs.oracle.com/javase/7/docs/api/java/lang/UnsupportedOperationException.html
+
+    throw new UnsupportedOperationException("Not yet implemented");
